--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "start:dev": "nodemon server.js",
+    "start:prod": "Node_ENV=production node server.js",
     "start": "node server.js"
   },
   "repository": {
