--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -33,6 +35,7 @@
     "nodemailer": "^6.9.8",
     "sharp": "^0.33.2",
     "slugify": "^1.6.6",
+    "stripe": "^14.16.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
